# pytest-parallel

./: .gitignore  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
tests/: conftest.py  test_thread1.py  test_thread2.py
