[project]
name = "pytest-parallel"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Romashov",email = "framebassman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pyhamcrest (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
