[project]
name = "pytest-parallel"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Romashov",email = "framebassman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pyhamcrest (>=2.1.0,<3.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
log_cli = "1"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

env_files = [
    ".env"
]

addopts = [
    "--junitxml=junit/test-results.xml"
]
